Renamed testing button, fixed extra whitespace.

--- a/src/wtf/replay/graphics/ui/eventnavigatortoolbar.less
+++ b/src/wtf/replay/graphics/ui/eventnavigatortoolbar.less
@@ -43,7 +43,7 @@
   .previousDrawCallButton {}
   .nextDrawCallButton {}
   .lastCallButton {}
-  .testFunctionButton {}
+  .toggleHighlightButton {}
 
   .optionsButton {}
 }
